Purchase using model

--- a/bit285-multiple-entities-demo/Views/Shared/_Layout.cshtml
+++ b/bit285-multiple-entities-demo/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     </header>
     <nav>
         @Html.ActionLink("Search", "Search")
-    @Html.ActionLink("Add New Book", "Create")
+    @Html.ActionLink("Add New Book", "AddBook")
 </nav>
 <div class="container body-content">
     @RenderBody()
