Have some problems with an exception. Submitting changes so far

--- a/bit285-multiple-entities-demo/Views/Home/AddBook.cshtml
+++ b/bit285-multiple-entities-demo/Views/Home/AddBook.cshtml
@@ -11,9 +11,9 @@
         @Html.ValidationMessageFor(m => m.Title, "*")
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Author)
-        @Html.EditorFor(m => m.Author)
-        @Html.ValidationMessageFor(m => m.Author, "*")
+        @Html.LabelFor(m => m.AuthorID)
+        @Html.EditorFor(m => m.AuthorID)
+        @Html.ValidationMessageFor(m => m.AuthorID, "*")
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Edition)
