--- a/bit285-multiple-entities-demo/Views/Home/Purchase.cshtml
+++ b/bit285-multiple-entities-demo/Views/Home/Purchase.cshtml
@@ -1,30 +1,29 @@
-﻿@model IndyBooks.Models.Purchase
+﻿@model IndyBooks.ViewModels.PurchaseViewModel
 
 @{
     ViewBag.Title = "Purchase";
 }
-<h2>Enter Purchase</h2>
-<hr />
-@using (Html.BeginForm())
+
+<h2>Purchase</h2>
+
+
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
-
+        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
+            @Html.DropDownListFor(model => model.MemberID, new SelectList(Model.Members, "MemberID", "Name"), new { htmlAttributes = new { @class = "form-control" } })
+
+            @Html.DropDownListFor(model => model.BookID, new SelectList(Model.Books, "BookID", "Title"), new { htmlAttributes = new { @class = "form-control" } })
+
+
             @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.BookID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BookID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BookID, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -34,9 +33,11 @@
             </div>
         </div>
     </div>
-
 }
 
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
