--- a/bit285-multiple-entities-demo/Views/Home/Purchases.cshtml
+++ b/bit285-multiple-entities-demo/Views/Home/Purchases.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<IndyBooks.Models.Purchase>
 
 @{
+    //TODO: Modify this View to use the PurchaseViewModel
     ViewBag.Title = "Purchases";
 }
 <h2>View Sales</h2>
