--- a/bit285-multiple-entities-demo/Views/Home/Purchases.cshtml
+++ b/bit285-multiple-entities-demo/Views/Home/Purchases.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<IndyBooks.Models.Purchase>
 
 @{
-    //TODO: Modify this View to use the PurchaseViewModel
-    ViewBag.Title = "Purchases";
+    //TODO: Modify this View to use a new SalesViewModel
+    ViewBag.Title = "Sales";
 }
-<h2>View Sales</h2>
+<h2>Sales</h2>
 
 <span class="sub-link">
     @Html.ActionLink("New Sale", "Purchase")
