just checking everything works

--- a/bit285-multiple-entities-demo/Views/Home/Purchases.cshtml
+++ b/bit285-multiple-entities-demo/Views/Home/Purchases.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Book.Title)
+            @Html.DisplayNameFor(model => model.BookID)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Amount)
@@ -24,7 +24,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Book.Title)
+                @Html.DisplayFor(modelItem => item.BookID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Amount)
